--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -30,4 +30,4 @@ jobs:
       run: composer install -vvv --no-progress
 
     - name: PHP phpstan
-      run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php  APIarchives.php APIarXiv.php APIBibCode.php APIdoi.php APIgoogle.php APIjstsor.php APIPubMed.php APIS2.php APIunpaywall.php
+      run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php  APIarchives.php APIarXiv.php APIBibCode.php APIdoi.php APIgoogle.php APIjstor.php APIPubMed.php APIS2.php APIunpaywall.php
