--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -31,7 +31,7 @@ jobs:
           format: 'sarif'
           output: ${{ env.SARIF_FILE }}
           severity: 'CRITICAL'
-          ignore-policy: DS002 DS026 # These issues are noted in the docker files
+          ignore-policy: AVD-DS-0002 AVD-DS-0026 # These issues are noted in the docker files
 
       - name: Check Trivy scan results existence
         run: |
