--- a/.github/workflows/DesignSecurity.yml
+++ b/.github/workflows/DesignSecurity.yml
@@ -30,4 +30,4 @@ jobs:
       run: composer install -vvv --no-progress
 
     - name: PHP Design Security
-      run: ./vendor/bin/progpilot --configuration progpilot.yml category.php generate_template.php gitpull.php linked_pages.php process_page.php authenticate.php
+      run: ./vendor/bin/progpilot --configuration progpilot.yml *.php includes/*.php includes/api/*.php
