--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -20,6 +20,7 @@ on:
       - '.github/workflows/trivy-analysis.yml'
       - '.gitignore'
       - '.phan'
+      - 'phan/config.php'
       - 'docker-compose.yml'
       - 'Dockerfile'
       - 'index.html'
