--- a/.github/workflows/html5check.yml
+++ b/.github/workflows/html5check.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v6.0.1
     
     - name: Run validator
-      uses: Cyb3r-Jak3/html5validator-action
+      uses: Cyb3r-Jak3/html5validator-action@v8.0.0
       with:
         root: src/
         blacklist: invalid
