--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -83,7 +83,7 @@ jobs:
       run: /bin/cat ./CodeCoverage
 
     - name: Code Coverage
-      if: always()
+      if:  ${{ !cancelled() && github.event_name != 'pull_request' }}
       uses: codecov/codecov-action@v5.5.2
       env:
          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
